--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul style="display: inline;">
             <li style="margin: 0 1%;"><a href="" class="links">HOME</a></li>
             <li style="margin: 0 1%;"><a href="" onclick="alert('currently we are working on this feature');" class="links">ABOUT US</a></li>
-            <li style="margin: 0 1%;"><a href="mailto: sahil.chopra025@gmail.com" class="links">CONTACT US</a></li>
+            <li style="margin: 0 1%;"><a href="mailto: pranshugupta5110@gmail.com" class="links">CONTACT US</a></li>
             <button style="margin: -7px 1%; font-size: 13px; padding: 10px 2px ;width: 100px; height: 45px; border-radius: 15px; background-color: #F26440;"><a href="#container2" class="links" style="color: white;"><i class="fa-solid fa-right-to-bracket"></i>  LOG OUT</a></button>
         </ul>
     </nav>
